# rust-voxel-polygon-study

./: Dockerfile  README.md  docker-compose.yml  当日説明.md
.github/workflows/: deploy.yml
texture-packing/: .gitignore  README.md  build.js
texture-packing/src/metal_plate_1k/: metal_plate_rough_1k.exr
texture-packing/src/red_brick_03_1k/: red_brick_03_nor_gl_1k.exr  red_brick_03_rough_1k.exr
texture-packing/src/rock_boulder_cracked_1k/: rock_boulder_cracked_rough_1k.exr
texture-packing/src/stone_brick_wall_001_1k/: stone_brick_wall_001_nor_gl_1k.exr  stone_brick_wall_001_rough_1k.exr
wasm/: Cargo.toml  Dockerfile  LICENSE_MIT  README.md  docker-compose.yml
wasm/src/: block.rs  cell.rs  chunk.rs  geometry.rs  geometry_buffer.rs  lib.rs  terrain_updater.rs  universe.rs  v2f.rs  v3f.rs  v3i.rs  vertex.rs
www/: README.md  index.js  package-lock.json  package.json  webpack.config.js
www/lib/: App.ts  rust_to_three.js  rust_to_three.ts
www/src/: index.html  index.js
www/src/lib/: App.ts  rust_to_three.ts
www/src/textures/packed/: packed_nor_gl.exr  packed_rough.exr
www/textures/rock_boulder_cracked_1k/: rock_boulder_cracked_nor_gl_1k.exr
