[package]
name = "rust-voxel-polygon-study-wasm"
version = "0.1.0"
authors = ["Yusuke Kawamoto <novogrammer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# wasm-bindgen = "0.2.63"
wasm-bindgen = "0.2.81"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

glam = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
# for speed
opt-level = 3

# [target.wasm32-unknown-unknown]
# rustflags = [
#   "-C", "link-args=-z stack-size=1500000",
# ]

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
# wasm-opt = ['-O4', '-g']
wasm-opt = false
